<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>

    <string name="app_name">signup</string>
    <string name="are_you_member_if_not_signup">Are you Member? If not signup.</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="welcome">Welcome</string>
    <string name="type_your_email_id">Type your Email id</string>
    <string name="type_tour_password">Type Tour Password</string>
    <string name="loginn">loginn</string>
    <string name="askemail">askemail</string>
    <string name="askpassword">askpassword</string>
    <string name="memberornot">Memberornot</string>
    <string name="background">background</string>
    <string name="namee">namee</string>
    <string name="your_name">Your name</string>
    <string name="emailaddress">emailaddress</string>
    <string name="passwordtype">passwordtype</string>
    <string name="shh_super_secret">shh!! super secret</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">email address</string>
    <string name="forgot_paswword_click_here">Forgot Paswword? Click here!</string>
    <string name="event_s_near_you">Event\'s Near You</string>
    <string name="register_your_event">Register Your Event</string>
    <string name="event_s_by_category">Event\'s by Category</string>
    <string name="your_profile">Your Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send_message">Send Message</string>
    <string name="send_us_message">Send us message</string>
    <string name="appicon">appicon</string>
    <string name="coding_with_simran">Coding with Simran</string>
    <string name="info_simran_com">info@Simran.com</string>

    <string name="just">Just</string>
    <string name="backgroundofappfirst">Backgroundofappfirst</string>
    <string name="report_bug">Report Bug</string>
    <string name="welcome_to_eventer">Welcome to Eventer!</string>
    <string name="faq">FAQ!</string>
    <string name="faq1">faq</string>
    <string name="about_us1">About Us!</string>
    <string name="about">about</string>
    <string name="connect">Connect!</string>
    <string name="your_event_s_name">Your Event\'s Name</string>
    <string name="date_of_event">Date of Event</string>
    <string name="time">Time</string>
    <string name="event_address">Event Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="upload_event_image">Upload Event Image</string>
    <string name="event_images">Event Images</string>
    <string name="upload">Upload</string>
    <string name="show_upload_s">Show Upload\'s</string>
    <string name="_1_what_is_event_management">1.What Is Event Management?</string>
    <string name="the_short_answer_to_the_question_is_event_management_is_the_process_of_designing_and_producing_events_in_the_india_alone_spending_on_events_last_year_was_42_billion_and_will_grow_to_50_billion_by_2020_there_are_25_000_event_businesses_in_the_uk_employing_over_530_000_people_this_is_an_exciting_industry_in_growth_and_encompasses_sectors_from_exhibitions_to_celebrity_sports_to_charity_and_festivals_to_fashion_there_are_so_many_options_the_question_is_which_one_interests_you_the_most">The short answer to the question is – Event Management is the process of designing and producing events. In the India alone spending on events last year was £42 billion and will grow to £50 billion by 2020. There are 25,000 event businesses in the UK employing over 530,000 people. This is an exciting industry in growth and encompasses sectors from exhibitions to celebrity, sports to charity and festivals to fashion – there are so many options, the question is; which one interests you the most!</string>
    <string name="_2_how_to_become_an_events_planner">2.How To Become An Events Planner?</string>
    <string name="the_first_steps_towards_establishing_your_career_in_events_will_be_to_gather_as_much_experience_as_possible_identify_the_skills_you_have_train_for_the_role_and_get_certified_at_the_events_academy_we_provide_placements_as_part_of_our_advanced_courses_postgraduate_and_degree_alternative_and_volunteering_opportunities_for_all_our_students_which_allow_them_to_add_real_life_experience_to_the_academic_learning">The first steps towards establishing your career in events will be to gather as much experience as possible, identify the skills you have, train for the role, and get certified. At The Events Academy, we provide placements as part of our advanced courses (Postgraduate and Degree Alternative) and volunteering opportunities for all our students which allow them to add real life experience to the academic learning.</string>
    <string name="imageabout">imageabout</string>
    <string name="eventer_was_founded_by_people_who_spent_decades_managing_events_and_built_the_solution_that_they_could_not_find_elsewhere_as_the_company_evolved_over_the_years_we_achieved_our_goal_of_providing_a_truly_end_to_end_event_solution_from_registration_to_attendee_tracking_to_detailed_reporting_completing_our_mission_to_provide_meeting_and_event_planners_with_what_they_need_when_they_need_it_with_responsive_teams_proven_tools_and_a_transformative_approach_to_create_shape_and_execute_a_first_class_event_and_attendee_experience_there_is_no_other_event_technology_company_in_the_market_that_has_the_commitment_to_help_clients_connect_better_while_also_improving_their_business_objectives">Eventer was founded by people who spent decades managing events, and built the solution that they could not find elsewhere. As the company evolved over the years, we achieved our goal of providing a truly end-to-end event solution—from registration to attendee tracking to detailed reporting—completing our mission to provide meeting and event planners with what they need, when they need it. With responsive teams, proven tools and a transformative approach to create, shape and execute a first-class event and attendee experience, there is no other event technology company in the market that has the commitment to help clients connect better while also improving their business objectives.</string>
    <string name="about_us">About Us</string>
    <string name="textview">TextView</string>
    <string name="whatsapp">whatsapp</string>
    <string name="fb">Fb</string>
    <string name="mailll">mailll</string>
</resources>