<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regi"
    android:fitsSystemWindows="true"
    android:scrollbarSize="10dp"
    tools:context=".registerevent"
    tools:openDrawer="start">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--           <FrameLayout-->
            <!--                android:id="@+id/fragment_container"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:background="@drawable/regi" />-->


            <TextView
                android:id="@+id/textView2"
                android:layout_width="324dp"
                android:layout_height="54dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/register_your_event"
                android:textColor="#000000"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="19dp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="333dp"
                android:layout_height="43dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:autofillHints="Your Name" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="333dp"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/your_event_s_name"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
                android:autofillHints="Event Name" />

            <EditText
                android:id="@+id/editTextDate2"
                android:layout_width="329dp"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/date_of_event"
                android:inputType="date"
                android:textColor="#000000"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
                android:autofillHints="Date Event" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="329dp"
                android:layout_height="43dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                android:textColor="#000000"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="@+id/editTextDate2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/editTextDate2"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate2"
                android:autofillHints="time" />

            <EditText
                android:id="@+id/editTextTextPostalAddress"
                android:layout_width="328dp"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/event_address"
                android:inputType="textPostalAddress"
                android:textColor="#000000"
                android:textColorHint="#050000"
                app:layout_constraintEnd_toEndOf="@+id/editTextTime"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTime"
                app:layout_constraintTop_toBottomOf="@+id/editTextTime"
                android:autofillHints="Event Address" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="330dp"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/contact_number"
                android:inputType="phone"
                android:textColor="#000000"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPostalAddress"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPostalAddress"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPostalAddress"
                android:autofillHints="Phone number" />

            <!--  <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  app:layout_constraintGuide_begin="@+id/button4"
                  app:layout_constraintGuide_end="@"/> -->

            <Button
                android:id="@+id/button4"
                android:layout_width="199dp"
                android:layout_height="46dp"
                android:layout_marginTop="28dp"
                android:text="@string/upload_event_image"
                app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="@+id/editTextPhone"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="401dp"
                android:layout_height="188dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="@+id/button4"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="@+id/button4"
                app:layout_constraintTop_toBottomOf="@+id/button4"
                android:contentDescription="@string/event_images" />

            <ProgressBar
                android:id="@+id/progressBar3"
                android:layout_width="408dp"
                android:layout_height="45dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView10"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="@+id/imageView10"
                app:layout_constraintTop_toBottomOf="@+id/imageView10"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button7"
                android:layout_width="217dp"
                android:layout_height="46dp"
                android:layout_marginTop="28dp"
                android:text="@string/upload"
                app:layout_constraintEnd_toEndOf="@+id/progressBar3"
                app:layout_constraintStart_toStartOf="@+id/progressBar3"
                app:layout_constraintTop_toBottomOf="@+id/progressBar3" />

            <TextView
                android:id="@+id/text_view_show_uploads"
                android:layout_width="146dp"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:text="@string/show_upload_s"
                android:textColor="#000000"
                android:textColorHint="#020000"
                app:layout_constraintEnd_toEndOf="@+id/button7"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="@+id/button7"
                app:layout_constraintTop_toBottomOf="@+id/button7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
      </ScrollView>


      <com.google.android.material.navigation.NavigationView
          android:id="@+id/nav_view"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="start"
          app:headerLayout="@layout/nav_hader"
          app:itemTextColor="#000000"
          app:menu="@menu/drawer_menu" >

      </com.google.android.material.navigation.NavigationView>


  </androidx.drawerlayout.widget.DrawerLayout>